# amx_sgemm

./: README.md
benchmark/: CMakeLists.txt  accelerate_gemm.h  amx_gemm.h  eigen_gemm.h  gemm.h  main.cpp  metal_gemm.h  openblas_gemm.h  run_all.sh
benchmark/old_result/: plot_gemm.gpi
benchmark/result/: plot_gemm.gpi
dougallj/: aarch64_amx.py  hwtest.c  simulator.h
src/: .gitignore  amx_sgemm.1.h  amx_sgemm.2.h  amx_sgemm.3.h  amx_sgemm.c  amx_sgemm.h  amx_sgemmr.c  extry.c  fma32.c  mac16.c  omp.c  omp.exp2.c  omp.exp3.c  omp.exp4.c  run.exp2.py  run.exp3.py  run.exp4.py  run.py  sgemm16x16.c
